# GEFCom2014_solution

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: __init__.py
analysis/baseline/: __init__.py  plots.py  run.py
analysis/catboost/: __init__.py  benchmark.py  feature_selection.py  predict_selected.py  report.py  round2_report.py  search.py  test_report.py
analysis/eda/: __init__.py  analysis.py  figures.py  load_plots.py  plot_utils.py  run.py  weather_plots.py
analysis/model_data/: __init__.py  run.py
artifacts/baseline/: report.md
artifacts/baseline/test/: aggregate_metrics.csv  (+7 more)
artifacts/eda/: report.md
configs/: backtest.yaml  baseline.yaml  catboost.yaml  catboost_round2_phase1.yaml  catboost_selected_predictions.yaml  eda.yaml  feature_selection.yaml  model_data.yaml
configs/features/: first_round.yaml  round2_candidates.yaml
configs/selected_features/: round1.yaml
src/gefcom2014/: __init__.py  analogues.py  backtesting.py  baselines.py  data.py  evaluation.py  metrics.py  model_data.py
tests/: test_annual_features.py  test_backtesting.py  test_baselines.py  test_catboost_model.py  test_catboost_search.py  test_data.py  test_evaluation.py  test_feature_builder.py  test_feature_selection.py  test_features.py  test_holiday_features.py  test_horizon_decay_features.py  test_metrics.py  test_model_data.py  test_recent_load_features.py  test_recent_profile_features.py  test_recent_temperature_features.py  test_seasonal_adjustment_features.py  test_seasonal_features.py  test_selected_predictions.py  test_temperature_features.py
(+100 files in other folders)
