[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gefcom2014-solution"
version = "0.1.0"
description = "Leakage-aware probabilistic load forecasting for GEFCom2014"
requires-python = ">=3.9,<3.14"
dependencies = [
    "matplotlib==3.9.4",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "PyYAML==6.0.2",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

